Fix horizontal scroll bar

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -80,6 +80,7 @@
       display: none;
       z-index: 5;
       overflow-y: auto;
+      overflow-x: hidden;
 
 
       position: absolute;
